--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-select": "^5.7.3",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://unne.pa/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
