--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 # AULEN API
 REACT_APP_API_URL="https://aulen.partnersadvisers.info"
+
+# PRIVATE UF API
+REACT_APP_API_URL_EXCHANGE_RATE_UF="https://api.cmfchile.cl/api-sbifv3/recursos_api/uf?apikey=b3c682f4e4e29811fa1fd8d3781a463b59181fb7&formato=json"
+REACT_APP_API_URL_EXCHANGE_RATE_UF_API_KEY="b3c682f4e4e29811fa1fd8d3781a463b59181fb7"
