--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "daisyui": "^2.51.6",
     "mapbox-gl": "^2.14.1",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-image-gallery": "^1.2.11",
