--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "daisyui": "^2.51.6",
     "mapbox-gl": "^2.14.1",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.7.1",
     "react-awesome-slider": "^4.1.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
