--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-number-format": "^5.1.4",
     "react-router-dom": "^6.11.1",
     "react-select": "^5.7.3",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "homepage": "https://unne.pa/",
