--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "react-icons": "^4.8.0",
     "react-image-gallery": "^1.2.11",
     "react-map-gl": "^7.0.23",
-    "react-number-format": "^5.1.4",
+    "react-number-format": "^5.2.2",
     "react-router-dom": "^6.11.1",
     "react-select": "^5.7.3",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
