--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.22.1",
+    "@babel/preset-env": "^7.22.2",
+    "@babel/preset-react": "^7.22.0",
     "@headlessui/react": "^1.7.14",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@react-pdf/renderer": "^3.1.9",
@@ -12,7 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "daisyui": "^2.51.6",
-    "mapbox-gl": "^2.14.1",
+    "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.1",
     "react-awesome-reveal": "^4.2.3",
@@ -59,6 +62,8 @@
   "devDependencies": {
     "postcss": "^8.4.23",
     "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "webpack": "^5.84.1",
+    "webpack-cli": "^5.1.1"
   }
 }
