--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.22.1",
-    "@babel/preset-env": "^7.22.2",
-    "@babel/preset-react": "^7.22.0",
     "@headlessui/react": "^1.7.14",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@react-pdf/renderer": "^3.1.9",
@@ -60,10 +57,15 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.22.1",
+    "@babel/preset-env": "^7.22.2",
+    "@babel/preset-react": "^7.22.0",
+    "babel-loader": "^9.1.2",
     "postcss": "^8.4.23",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.2",
     "webpack": "^5.84.1",
-    "webpack-cli": "^5.1.1"
+    "webpack-cli": "^5.1.1",
+    "worker-loader": "^3.0.8"
   }
 }
