--- a/package.json
+++ b/package.json
@@ -38,17 +38,13 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "not chrome < 51",
+      "not safari < 10"
     ],
     "development": [
       "last 1 chrome version",
@@ -67,14 +63,5 @@
     "webpack": "^5.84.1",
     "webpack-cli": "^5.1.1",
     "worker-loader": "^3.0.8"
-  },
-  "browser": {
-    "mapbox-gl": "./node_modules/mapbox-gl/dist/mapbox-gl.js"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env",
-      "@babel/preset-react"
-    ]
   }
 }
