--- a/.htaccess
+++ b/.htaccess
@@ -45,6 +45,9 @@ RewriteRule ^eres-corredor/academia-unne /index.html [L]
 # Ruta /propiedades/propiedades-en-mapa
 RewriteRule ^propiedades/propiedades-en-mapa /index.html [L]
 
+# Página 404 personalizada
+ErrorDocument 404 /index.html
+
 # php -- BEGIN cPanel-generated handler, do not edit
 # Set the “ea-php73” package as the default “PHP” programming language.
 <IfModule mime_module>
